# NewsApp

./: .gitignore  Dockerfile  handlers.py  index.html  output.css  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py
Clients/: get_htmx.sh  tailwind.config.js
Clients/Legacy/: index.html  output.css
Clients/hacker_news/: package-lock.json  package.json
Clients/hacker_news/pages/: asks.tsx
Servers/Hacker_News/: app.ts  index.js  package-lock.json  package.json  tsconfig.json
Servers/Hacker_News/common/: common.routes.configuration.ts  types.ts
Servers/Hacker_News/distribution/: API.js  analytics.js  app.js  backend.js  database.js  logging.js
Servers/Hacker_News/distribution/common/: common.routes.configuration.js  types.js
Servers/Hacker_News/distribution/items/: items.routes.configuration.js
Servers/Hacker_News/distribution/services/: API.js  analytics.js  backend.js  database.js  logging.js
Servers/Hacker_News/distribution/stories/: stories.routes.configuration.js
Servers/Hacker_News/distribution/users/: users.routes.configuration.js
Servers/Hacker_News/items/: items.routes.configuration.ts
Servers/Hacker_News/services/: API.ts  analytics.ts  backend.ts  database.ts  logging.ts
Servers/Hacker_News/stories/: stories.routes.configuration.ts
Servers/Hacker_News/users/: users.routes.configuration.ts
Servers/Reddit/: package-lock.json  package.json
Servers/Reddit/distribution/: API.js
Servers/Reddit/services/: API.ts
Servers/web-scraping/: common.py  handlers.py  main.py  utilities.py
